k8s/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kps-kube-prometheus-stack-prometheus
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.team3.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kps-kube-prometheus-stack-prometheus
                port:
                  number: 9090
